# Mini-Distributed-File-Storage-System

./: README.md
backend/: CMakeLists.txt
backend/include/: cors.h
backend/src/: main.cpp
frontend/Distributed_File_Storage/: package-lock.json  package.json
frontend/Distributed_File_Storage/src/: App.jsx
